# applicantbuddy-api-v2

./: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 55cfcfd564c3_init_db.py  7b75efeb6c7e_init_db.py
app/: celery.py  main.py
app/core/: settings.py
app/core/extended_settings/: app_settings.py  database_settings.py  llm_settings.py  scrapper_settings.py
app/database/: models.py
app/modules/: ocr.py  vector.py
app/services/matching/: methods.py  router.py
app/services/resume/: methods.py  router.py  schema.py  service.py  task.py
app/services/vacancies/: linkedin_scrapper_task.py  methods.py  schema.py
app/utils/: llm_clients.py  scrapper_clients.py  vector_clients.py
chroma_db/: chroma.sqlite3
